# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,9 @@ import adsRouter from "./ads";
 import statsRouter from "./stats";
 import brandingRouter from "./branding";
 import adminRouter from "./admin";
+import adminUsersRouter from "./admin-users";
+import adminStatsRouter from "./admin-stats";
+import adminModesRouter from "./admin-modes";
 import authRouter from "./auth";
 import categoriesRouter from "./categories";
 import unitsRouter from "./units";
@@ -18,6 +21,9 @@ router.use(adsRouter);
 router.use(statsRouter);
 router.use(brandingRouter);
 router.use(adminRouter);
+router.use(adminUsersRouter);
+router.use(adminStatsRouter);
+router.use(adminModesRouter);
 router.use(authRouter);
 router.use(categoriesRouter);
 router.use(unitsRouter);
